syntax = "proto3";
package ununifi.auction;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
// this line is used by starport scaffolding # genesis/proto/import
import "auction/auction.proto";

option go_package = "github.com/UnUniFi/chain/deprecated/auction/types";

// GenesisState defines the auction module's genesis state.
message GenesisState {
  uint64 next_auction_id = 1 [(gogoproto.moretags) = "yaml:\"next_auction_id\""];
  Params params = 2 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
  repeated google.protobuf.Any auctions = 3 [
    (gogoproto.moretags) = "yaml:\"auctions\""
  ];
  // this line is used by starport scaffolding # genesis/proto/state
}
